Beaker Changelog
================

1.3 (**tip**)
* Add function to parse configuration dicts as appropriate for use with the
  CacheManager.

1.2.3 (3/2/2009)
* Fix accessed increment to take place *after* the accessed time is checked
  to see if it has expired. Fixes #580.
* data_dir/lock_dir parameters are optional to most backends; if not
  present, mutex-based locking will be used for creation functions
* Adjustments to Container to better account for backends which
  don't provide read/write locks, such as memcached.  As a result,
  the plain "memory" cache no longer requires read/write mutexing.

1.2.2 (2/14/2009)
* Fix delete bug reported by andres with session not being deleted.

1.2.1 (2/09/2009)
* Fix memcached behavior as memcached returns None on nonexistent key
  fetch which broke invalid session checking.

1.2 (1/22/2009)
* Updated session to only save to the storage *once* no under any/all
  conditions rather than every time save() is called.
* Added session.revert() function that reverts the session to the state at
  the beginning of the request.
* Updated session to store entire session data in a single namespace key,
  this lets memcached work properly, and makes for more efficient use of the
  storage system for sessions.

1.1.3 (12/29/2008)
* Fix the 1.1.2 old cache/session upgrader to handle the has_current_value
  method.
* Make InvalidCacheBackendError an ImportError.

1.1.2 (11/24/2008)
* Upgrade Beaker pre-1.1 cache/session values to the new format rather than
  throwing an exception.

1.1.1 (11/24/2008)
* Fixed bug in Google extension which passed arguments it should no longer
  pass to NamespaceManager.
* Fixed bug involving lockfiles left open during cache "value creation"
  step.

1.1 (11/16/2008)
* file-based cache will not hold onto cached value once read from file;
  will create new value if the file is deleted as opposed to re-using
  what was last read.  This allows external removal of files to be